# yaam

./: .gitignore  .mcp.json  AGENTS.md  CONCURRENCY_SPEC.md  GEMINI.md  HANDOVER.md  README.md  add_note.py  db.py  index.ts  install.py  install.sh  logger.py  memory.lbug  package-lock.json  package.json  parser.py  plugin-skill-destribution.txt  plugin.json  reconciler.py  requirements.txt  retrieval.py  server.py  test_concurrency.ts  test_decay.lbug.shadow  test_file.py  test_functional.lbug.shadow  test_parallel.lbug.shadow  test_param.lbug  test_spool.lbug.shadow  tsconfig.json
.agents/: hooks.json
.agents/skills/yaam-memory-manager/: SKILL.md
.claude-plugin/: plugin.json
.gemini/: settings.json
.gemini/skills/: yaam-memory-manager
.gemini/skills/yaam-memory-manager/: SKILL.md
.pi/extensions/yaam/: index.ts
.yaam/: config.json
scripts/: add-language.sh  setup.sh
skills/yaam-memory-manager/: SKILL.md
skills/yaam-memory-manager/scripts/: db.ts  graph_explore.ts  lsp_client.ts  reconciler.ts  workspace_append_note.ts
src/: db.ts  db_worker.ts  engine-client.ts  graph_explore.ts  index.ts  reconciler.ts  visualizer.ts  workspace.ts
src-rust/: Cargo.toml
src-rust/src/: embedding.rs  graph.rs  language_adapter.rs  lsp_adapter.rs  main.rs  query_dsl.rs  reconciler.rs  rpc.rs  search.rs  storage.rs  types.rs
test_py/: a.py  b.py
tests/: db.test.ts  functional.test.ts  stress.test.ts  test_db.py  test_mcp_real.py  test_parser.py  test_reconciler.py  test_retrieval.py  test_scenario.py  test_server.py
yaam-memory-manager/: SKILL.md
(+4 files in other folders)
